--- a/basemodule/build.gradle
+++ b/basemodule/build.gradle
@@ -23,6 +23,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+
+
     compileOptions {
         sourceCompatibility = "1.8"
         targetCompatibility = "1.8"
@@ -66,7 +69,6 @@ dependencies {
 
     api 'com.jeremyliao:live-event-bus-x:1.5.1'
 
-    api 'com.nfleo:MatisseKotlin:2.0.1'
     api 'de.hdodenhof:circleimageview:3.0.1'
     def nav_version = '2.1.0'
     api "androidx.navigation:navigation-fragment:$nav_version"
@@ -81,8 +83,12 @@ dependencies {
     api "androidx.room:room-runtime:$room_version"
     api "androidx.room:room-ktx:$room_version"
     api 'androidx.lifecycle:lifecycle-extensions:2.1.0'
+
     api 'androidx.navigation:navigation-fragment-ktx:2.1.0'
     api 'androidx.navigation:navigation-ui-ktx:2.1.0'
+//    api "androidx.navigation:navigation-dynamic-features-fragment:2.3.0-SNAPSHOT"
+
+
     kapt "androidx.room:room-compiler:$room_version"
 
 
@@ -152,7 +158,7 @@ dependencies {
     api "com.scwang.smart:refresh-header-classics:$srl_version"    //经典刷新头
 //    api  "com.scwang.smart:refresh-header-radar:$srl_version"       //雷达刷新头
 //    api  "com.scwang.smart:refresh-header-falsify:$srl_version"     //虚拟刷新头
-//    api  "com.scwang.smart:refresh-header-material:$srl_version"    //谷歌刷新头
+    api  "com.scwang.smart:refresh-header-material:$srl_version"    //谷歌刷新头
 //    api  "com.scwang.smart:refresh-header-two-level:$srl_version"   //二级刷新头
 //    api  "com.scwang.smart:refresh-footer-ball:$srl_version"        //球脉冲加载
     api "com.scwang.smart:refresh-footer-classics:$srl_version"    //经典加载
