--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,21 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+    /**加快编译速度*/
+    tasks.whenTaskAdded { task ->
+        if (task.name.contains("lint")
+                || task.name.equals("clean")
+                || task.name.contains("Aidl")
+                || task.name.contains("mockableAndroidJar")
+                || task.name.contains("UnitTest")
+                || task.name.contains("AndroidTest")
+//                || task.name.contains("Ndk")
+//                || task.name.contains("Jni")
+        ) {
+            task.enabled = false
+        }
+    }
 }
 
 
