--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,19 +1,13 @@
-//
-//if (isModule) {
-//    apply plugin: 'com.android.library'
-//} else {
-//    apply plugin: 'com.android.application'
-//}
 apply plugin: 'com.android.application'
-
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'androidx.navigation.safeargs'
 
+//apply plugin: 'com.didi.dokit'
 android {
-    compileSdkVersion 29
-    buildToolsVersion "29.0.2"
+    compileSdkVersion 30
+    buildToolsVersion '30.0.0 rc1'
 
 
     defaultConfig {
@@ -21,9 +15,9 @@ android {
 
 
         minSdkVersion 21
-        targetSdkVersion 29
-        versionCode 1
-        versionName "1.0"
+        targetSdkVersion 30
+        versionCode 2
+        versionName "1.0.1"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -44,6 +38,8 @@ android {
             resValue "bool", "isModule", "$isModule"
 
             manifestPlaceholders = [app_name: "出国境管理测试", app_icon: "@mipmap/ic_launcher"]
+
+
         }
 
         myrelease {
@@ -61,6 +57,10 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+
+
+
 
     /**加快编译速度*/
     tasks.whenTaskAdded { task ->
@@ -80,14 +80,84 @@ android {
     dexOptions {
         preDexLibraries true
     }
-}
 
+
+    beforeEvaluate {
+
+    }
+    afterEvaluate {
+
+    }
+//    buildFeatures {
+//        // Enables Jetpack Compose for this module
+//        compose true
+//    }
+//    composeOptions {
+//        kotlinCompilerExtensionVersion "0.1.0-dev13"
+//    }
+
+
+}
+//
+//dokitExt {
+//    //dokit 插件开关
+//    dokitPluginSwitch true
+//    //通用设置
+//    comm {
+//        //地图经纬度开关
+//        gpsSwitch true
+//        //网络开关
+//        networkSwitch true
+//        //大图开关
+//        bigImgSwitch true
+//    }
+//
+//    slowMethod {
+//        //0:默认模式 打印函数调用栈 需添加指定入口  默认为application onCreate 和attachBaseContext
+//        //1:普通模式 运行时打印某个函数的耗时 全局业务代码函数插入 已弃用
+//        strategy 1
+//        //函数功能开关 已弃用
+//        methodSwitch false
+//
+//        //调用栈模式配置
+//        stackMethod {
+//            //默认值为 5ms 小于该值的函数在调用栈中不显示
+//            thresholdTime 5
+//            //调用栈函数入口
+//            enterMethods = ["com.didichuxing.doraemondemo.MainDebugActivity.test1"]
+//        }
+//        //普通模式配置
+//        normalMethod {
+//            //默认值为 500ms 小于该值的函数在运行时不会在控制台中被打印
+//            thresholdTime 100
+//            //需要针对函数插装的包名
+//            packageNames = ["com.didichuxing.doraemondemo"]
+//            //不需要针对函数插装的包名&类名
+//            methodBlacklist = ["com.didichuxing.doraemondemo.dokit"]
+//        }
+//    }
+//}
 
 dependencies {
-    implementation project(':basemodule')
+    implementation  project(':basemodule')
 
     implementation project(':firstmodule')
 
     implementation project(':secondmodule')
+//
+//    implementation 'androidx.ui:ui-core:0.1.0-dev13'
+//    implementation 'androidx.ui:ui-tooling:0.1.0-dev13'
+//    implementation 'androidx.ui:ui-layout:0.1.0-dev13'
+//    implementation 'androidx.ui:ui-material:0.1.0-dev13'
 
+    debugImplementation 'com.didichuxing.doraemonkit:doraemonkit:3.1.8'
+    releaseImplementation 'com.didichuxing.doraemonkit:doraemonkit-no-op:3.1.8'
+
+//    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.4'
+//    debugImplementation "com.didichuxing.doraemonkit:doraemonkit:3.1.8"
+//    releaseImplementation "com.didichuxing.doraemonkit:doraemonkit-no-op:3.1.8"
+
+    testImplementation 'junit:junit:4.13'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 }
