--- a/basemodule/src/main/AndroidManifest.xml
+++ b/basemodule/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="cn.kaipuyun.basemodule">
+    package="ls.yylx.lscodestore.basemodule">
 
     <application
+        android:name=".BaseApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
