--- a/build.gradle
+++ b/build.gradle
@@ -1,36 +1,39 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.61'
+
+    ext.kotlin_version = '1.4-M2'
     ext.isModule = true
 
 
     repositories {
-        maven { url 'https://maven.aliyun.com/repository/google' }
-        maven { url 'https://maven.aliyun.com/repository/public' }
         google()
         jcenter()
         mavenCentral()
-//        maven { url "https://ci.android.com/builds/submitted/6043188/androidx_snapshot/latest/repository/" }
+        maven { url "https://jitpack.io" }
+        maven { url "http://dl.bintray.com/kotlin/kotlin-eap" }
+        maven { url 'https://maven.aliyun.com/repository/google' }
+        maven { url 'https://maven.aliyun.com/repository/public' }
     }
+
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.0-alpha03'
+        classpath 'com.android.tools.build:gradle:4.2.0-alpha03'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'androidx.navigation:navigation-safe-args-gradle-plugin:2.1.0'
+        classpath 'androidx.navigation:navigation-safe-args-gradle-plugin:2.3.0'
+//        classpath 'com.didichuxing.doraemonkit:doraemonkit-plugin:3.1.8'
     }
 }
 
+
 allprojects {
     repositories {
-        maven { url 'https://maven.aliyun.com/repository/google' }
-        maven { url 'https://maven.aliyun.com/repository/public' }
-        maven { url "https://jitpack.io" }
-
-
         google()
         jcenter()
         mavenCentral()
-//        maven { url "https://ci.android.com/builds/submitted/6043188/androidx_snapshot/latest/repository/" }
+        maven { url "https://jitpack.io" }
+        maven { url "http://dl.bintray.com/kotlin/kotlin-eap" }
+        maven { url 'https://maven.aliyun.com/repository/google' }
+        maven { url 'https://maven.aliyun.com/repository/public' }
     }
 }
 
