--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,22 +6,32 @@ apply plugin: 'androidx.navigation.safeargs'
 
 //apply plugin: 'com.didi.dokit'
 android {
-    compileSdkVersion 30
-    buildToolsVersion '30.0.0 rc1'
+    compileSdkVersion 29
+    buildToolsVersion '29.0.2'
 
 
     defaultConfig {
         applicationId "ls.yylx.lscodestore"
 
 
-        minSdkVersion 21
-        targetSdkVersion 30
+        minSdkVersion 24
+        targetSdkVersion 29
         versionCode 2
         versionName "1.0.1"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        externalNativeBuild {
+            cmake {
+                cppFlags ""
+            }
+        }
     }
-
+    signingConfigs {
+        config {
+            enableV3Signing(true)
+            enableV4Signing(true)
+        }
+    }
     buildTypes {
         release {
             minifyEnabled false
@@ -37,8 +47,7 @@ android {
 
             resValue "bool", "isModule", "$isModule"
 
-            manifestPlaceholders = [app_name: "出国境管理测试", app_icon: "@mipmap/ic_launcher"]
-
+            manifestPlaceholders = [app_name: "啊啊啊测试", app_icon: "@mipmap/ic_launcher"]
 
         }
 
@@ -58,9 +67,12 @@ android {
         jvmTarget = '1.8'
     }
 
-
-
-
+    externalNativeBuild {
+        cmake {
+            path "src/main/cpp/CMakeLists.txt"
+            version "3.10.2"
+        }
+    }
 
     /**加快编译速度*/
     tasks.whenTaskAdded { task ->
@@ -95,8 +107,6 @@ android {
 //    composeOptions {
 //        kotlinCompilerExtensionVersion "0.1.0-dev13"
 //    }
-
-
 }
 //
 //dokitExt {
@@ -126,7 +136,7 @@ android {
 //            //调用栈函数入口
 //            enterMethods = ["com.didichuxing.doraemondemo.MainDebugActivity.test1"]
 //        }
-//        //普通模式配置
+//        //普通模式配置`
 //        normalMethod {
 //            //默认值为 500ms 小于该值的函数在运行时不会在控制台中被打印
 //            thresholdTime 100
@@ -140,19 +150,30 @@ android {
 
 dependencies {
     implementation  project(':basemodule')
-
     implementation project(':firstmodule')
-
     implementation project(':secondmodule')
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
+
+
+
+    implementation 'com.arthenica:mobile-ffmpeg-full:4.3.2'
+    implementation 'com.quickbirdstudios:opencv:4.1.0-contrib'
 //
 //    implementation 'androidx.ui:ui-core:0.1.0-dev13'
 //    implementation 'androidx.ui:ui-tooling:0.1.0-dev13'
 //    implementation 'androidx.ui:ui-layout:0.1.0-dev13'
 //    implementation 'androidx.ui:ui-material:0.1.0-dev13'
 
+    def room_version = "2.2.5"
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt  "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
+
     debugImplementation 'com.didichuxing.doraemonkit:doraemonkit:3.1.8'
     releaseImplementation 'com.didichuxing.doraemonkit:doraemonkit-no-op:3.1.8'
-
 //    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.4'
 //    debugImplementation "com.didichuxing.doraemonkit:doraemonkit:3.1.8"
 //    releaseImplementation "com.didichuxing.doraemonkit:doraemonkit-no-op:3.1.8"
