--- a/basemodule/build.gradle
+++ b/basemodule/build.gradle
@@ -10,12 +10,12 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'androidx.navigation.safeargs'
 
 android {
-    compileSdkVersion 30
-    buildToolsVersion '30.0.0 rc1'
+    compileSdkVersion 29
+    buildToolsVersion '29.0.2'
 
     defaultConfig {
         minSdkVersion 21
-        targetSdkVersion 30
+        targetSdkVersion 29
         versionCode 1
         versionName "1.0"
 
@@ -72,18 +72,14 @@ dependencies {
     api 'androidx.appcompat:appcompat:1.3.0-alpha01'
     api 'androidx.core:core-ktx:1.3.0'
     api "androidx.fragment:fragment-ktx:1.3.0-alpha06"
-    api "androidx.navigation:navigation-fragment-ktx:2.3.0"
-    api "androidx.navigation:navigation-ui-ktx:2.3.0"
+    api "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    api "androidx.navigation:navigation-ui-ktx:$nav_version"
     //    api "androidx.navigation:navigation-dynamic-features-fragment:2.3.0-SNAPSHOT"
-
-    api "androidx.room:room-runtime:2.2.5"
-    api "androidx.room:room-ktx:2.2.5"
-    kapt "androidx.room:room-compiler:2.2.5"
 
     //页面
     api "androidx.recyclerview:recyclerview:1.1.0"
     api "androidx.recyclerview:recyclerview-selection:1.1.0-rc01"//用于控制触摸和鼠标驱动的选择
-    api 'androidx.constraintlayout:constraintlayout:2.0.0-beta7' //约束布局
+    api 'androidx.constraintlayout:constraintlayout:2.0.0-beta8' //约束布局
     api 'androidx.viewpager2:viewpager2:1.0.0' //viewpager2
     api "androidx.paging:paging-runtime-ktx:2.1.2" //   分页加载
 
@@ -94,7 +90,6 @@ dependencies {
     api "androidx.autofill:autofill:1.0.0" //自动填写
     api "androidx.browser:browser:1.2.0" //打开浏览器，传递数据
     api "androidx.work:work-runtime-ktx:2.3.4" //WorkManager,应用退出也可以完成
-
     // camerax库
     def camerax_version = "1.0.0-beta06"
     api "androidx.camera:camera-core:${camerax_version}" //相机库
@@ -112,19 +107,21 @@ dependencies {
     api "androidx.lifecycle:lifecycle-reactivestreams-ktx:${lifecycle_version}"
     api "androidx.lifecycle:lifecycle-extensions:2.2.0"
 
-    api "androidx.biometric:biometric:1.0.1"//指纹库
 
+
+    api "androidx.biometric:biometric:1.0.1"//指纹库
     api 'com.google.android.material:material:1.3.0-alpha01' //样式库
 
 
+
     /**网络相关*/
-    def retrofit2_version = '2.6.1'
+    def retrofit2_version = '2.9.0'
     api "com.squareup.retrofit2:retrofit:$retrofit2_version"
     api "com.squareup.retrofit2:converter-gson:$retrofit2_version"
-    def okhttp3_version = '4.2.0'
+    def okhttp3_version = '4.7.2'
     api "com.squareup.okhttp3:okhttp:$okhttp3_version"
     api "com.squareup.okhttp3:logging-interceptor:$okhttp3_version"
-    def glide_version = '4.9.0'
+    def glide_version = '4.11.0'
     api "com.github.bumptech.glide:glide:$glide_version"
     api "com.github.bumptech.glide:okhttp3-integration:$glide_version"
     api("com.github.bumptech.glide:recyclerview-integration:$glide_version") {
@@ -133,7 +130,7 @@ dependencies {
     kapt "com.github.bumptech.glide:compiler:$glide_version"
 
 
-    api 'de.hdodenhof:circleimageview:3.0.1' //圆形图片库
+    api 'de.hdodenhof:circleimageview:3.1.0' //圆形图片库
     api 'com.github.chrisbanes:PhotoView:2.3.0' //图片缩放
     api 'com.jeremyliao:live-event-bus-x:1.5.1'//替代eventbus，基于livedata的通讯库，可以跨进程
     api 'cn.bingoogolapple:bga-qrcode-zbar:1.3.6'//高效二维码库，基于zbar
@@ -143,7 +140,7 @@ dependencies {
     api 'com.tencent:mmkv-static:1.0.23' // 替代sp的库，高效，稳定，基于protobuf的本地储存库
     api 'com.just.agentweb:agentweb:4.0.3-beta' // webview库
     api 'com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.4' //recycleview的adapter库
-    api 'org.jsoup:jsoup:1.12.1' //解析html数据的库
+    api 'org.jsoup:jsoup:1.13.1' //解析html数据的库
     //下拉刷新库
     def srl_version = '2.0.1'
     api "com.scwang.smart:refresh-layout-kernel:$srl_version"      //核心必须依赖
@@ -164,7 +161,7 @@ dependencies {
     api "com.afollestad.material-dialogs:input:$md_version" //输入框样式
 
 
-    testImplementation 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
