--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,13 @@
 
 buildscript {
 
-    ext.kotlin_version = '1.4-M2'
-    ext.isModule = true
+    ext {
+        nav_version = '2.3.0'
+        kotlin_version = '1.4-M3'
+        isModule = true
+        compose_version = '0.1.0-dev14'
+        room_version='2.3.0-alpha01'
+    }
 
 
     repositories {
@@ -17,9 +22,9 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.2.0-alpha03'
+        classpath 'com.android.tools.build:gradle:4.2.0-alpha04'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'androidx.navigation:navigation-safe-args-gradle-plugin:2.3.0'
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
 //        classpath 'com.didichuxing.doraemonkit:doraemonkit-plugin:3.1.8'
     }
 }
