--- a/firstmodule/build.gradle
+++ b/firstmodule/build.gradle
@@ -1,14 +1,10 @@
-if (isModule) {
-    apply plugin: 'com.android.library'
-} else {
-    apply plugin: 'com.android.application'
-}
+apply plugin: 'com.android.library'
 
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
-
+apply plugin: 'kotlin-kapt'
 android {
-    compileSdkVersion 30
+    compileSdkVersion 29
 
     defaultConfig {
         if (!isModule) {
@@ -16,7 +12,7 @@ android {
         }
 
         minSdkVersion 21
-        targetSdkVersion 30
+        targetSdkVersion 29
         versionCode 1
         versionName "1.0"
 
