--- a/secondmodule/build.gradle
+++ b/secondmodule/build.gradle
@@ -1,22 +1,17 @@
-if (isModule) {
-    apply plugin: 'com.android.library'
-} else {
-    apply plugin: 'com.android.application'
-}
-
+apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
-
+apply plugin: 'kotlin-kapt'
 android {
-    compileSdkVersion 30
+    compileSdkVersion 29
 
     defaultConfig {
-        if (!isModule) {
-            applicationId "ls.yylx.lscodestore.secondmodule"
-        }
+//        if (!isModule) {
+//            applicationId "ls.yylx.lscodestore.secondmodule"
+//        }
 
         minSdkVersion 21
-        targetSdkVersion 30
+        targetSdkVersion 29
         versionCode 1
         versionName "1.0"
 
@@ -30,9 +25,25 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    buildFeatures {
+        // Enables Jetpack Compose for this module
+        compose false
+    }
+    kotlinOptions {
+        jvmTarget = '1.8'
+    }
+    composeOptions {
+        kotlinCompilerExtensionVersion "${compose_version}"
+        kotlinCompilerVersion '1.3.70-dev-withExperimentalGoogleExtensions-20200424'
+    }
 
 }
 
 dependencies {
     implementation project(':basemodule')
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation "androidx.ui:ui-core:$compose_version"
+    implementation "androidx.ui:ui-layout:$compose_version"
+    implementation "androidx.ui:ui-material:$compose_version"
+    implementation "androidx.ui:ui-tooling:$compose_version"
 }
