--- a/secondmodule/src/main/AndroidManifest.xml
+++ b/secondmodule/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:theme="@style/AppTheme">
 
 
-        <activity android:name=".SecondMainActivity"/>
+        <activity android:name=".main.SecondMainActivity"/>
     </application>
 
 </manifest>
