--- a/basemodule/build.gradle
+++ b/basemodule/build.gradle
@@ -11,7 +11,7 @@ apply plugin: 'androidx.navigation.safeargs'
 
 android {
     compileSdkVersion 29
-    buildToolsVersion '29.0.2'
+    buildToolsVersion '30.0.1'
 
     defaultConfig {
         minSdkVersion 21
@@ -49,13 +49,14 @@ dependencies {
 //    /**核心库-anko库 ，dsl动态创建view*/
     def anko_version = '0.10.8'
     /**anko*/
-//    api "org.jetbrains.anko:anko:$anko_version"
-//    api "org.jetbrains.anko:anko-design:$anko_version"
-//    api "org.jetbrains.anko:anko-design-coroutines:$anko_version"
-//    api "org.jetbrains.anko:anko-support-v4:$anko_version"
-//    api "org.jetbrains.anko:anko-constraint-layout:$anko_version"
-//    api "org.jetbrains.anko:anko-recyclerview-v7:$anko_version"
-//    api "org.jetbrains.anko:anko-recyclerview-v7-coroutines:$anko_version"
+    api "org.jetbrains.anko:anko:$anko_version"
+    api "org.jetbrains.anko:anko-design:$anko_version"
+    api "org.jetbrains.anko:anko-design-coroutines:$anko_version"
+    api "org.jetbrains.anko:anko-support-v4:$anko_version"
+    api "org.jetbrains.anko:anko-constraint-layout:$anko_version"
+    api "org.jetbrains.anko:anko-recyclerview-v7:$anko_version"
+    api "org.jetbrains.anko:anko-recyclerview-v7-coroutines:$anko_version"
+
 
     /**splitties 替代 anko**/
     api("com.louiscad.splitties:splitties-fun-pack-android-base:3.0.0-alpha06")
@@ -70,8 +71,8 @@ dependencies {
     /**androidx,各种库*/
     //基本库 - 最常使用
     api 'androidx.appcompat:appcompat:1.3.0-alpha01'
-    api 'androidx.core:core-ktx:1.3.0'
-    api "androidx.fragment:fragment-ktx:1.3.0-alpha06"
+    api 'androidx.core:core-ktx:1.3.1'
+    api "androidx.fragment:fragment-ktx:1.3.0-alpha07"
     api "androidx.navigation:navigation-fragment-ktx:$nav_version"
     api "androidx.navigation:navigation-ui-ktx:$nav_version"
     //    api "androidx.navigation:navigation-dynamic-features-fragment:2.3.0-SNAPSHOT"
@@ -85,21 +86,21 @@ dependencies {
 
     //其他
     api "androidx.biometric:biometric:1.0.1" //生物识别
-    api "androidx.startup:startup-runtime:1.0.0-alpha01"//启动
+    api "androidx.startup:startup-runtime:1.0.0-alpha02"//启动
     api "androidx.asynclayoutinflater:asynclayoutinflater:1.0.0"//异步布局填充
     api "androidx.autofill:autofill:1.0.0" //自动填写
     api "androidx.browser:browser:1.2.0" //打开浏览器，传递数据
-    api "androidx.work:work-runtime-ktx:2.3.4" //WorkManager,应用退出也可以完成
+    api "androidx.work:work-runtime-ktx:2.4.0" //WorkManager,应用退出也可以完成
     // camerax库
-    def camerax_version = "1.0.0-beta06"
+    def camerax_version = "1.0.0-beta07"
     api "androidx.camera:camera-core:${camerax_version}" //相机库
     api "androidx.camera:camera-camera2:${camerax_version}"//可选，camera2，因为core间接的包含camera2
     api "androidx.camera:camera-lifecycle:${camerax_version}"//可选，使用camera-lifecycle库
-    api "androidx.camera:camera-view:1.0.0-alpha13"//可选，使用 CameraX View
-    api "androidx.camera:camera-extensions:1.0.0-alpha13" //可选，使用  CameraX 扩展库
+    api "androidx.camera:camera-view:1.0.0-alpha14"//可选，使用 CameraX View
+    api "androidx.camera:camera-extensions:1.0.0-alpha14" //可选，使用  CameraX 扩展库
 
     // lifecycle库
-    def lifecycle_version = "2.3.0-alpha05"
+    def lifecycle_version = "2.3.0-alpha06"
     api "androidx.lifecycle:lifecycle-viewmodel-ktx:${lifecycle_version}"
     api "androidx.lifecycle:lifecycle-livedata-ktx:${lifecycle_version}"
     api "androidx.lifecycle:lifecycle-runtime-ktx:${lifecycle_version}"
@@ -110,7 +111,7 @@ dependencies {
 
 
     api "androidx.biometric:biometric:1.0.1"//指纹库
-    api 'com.google.android.material:material:1.3.0-alpha01' //样式库
+    api 'com.google.android.material:material:1.3.0-alpha02' //样式库
 
 
 
