--- a/firstmodule/build.gradle
+++ b/firstmodule/build.gradle
@@ -5,6 +5,7 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 android {
     compileSdkVersion 29
+    buildToolsVersion '30.0.1'
 
     defaultConfig {
         if (!isModule) {
@@ -41,15 +42,10 @@ android {
 
 dependencies {
     implementation project(':basemodule')
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'com.google.android.material:material:1.1.0'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     //    /**核心库-anko库 ，dsl动态创建view*/
-    def anko_version = '0.10.8'
-    /**anko*/
-    implementation "org.jetbrains.anko:anko:$anko_version"
-    implementation "org.jetbrains.anko:anko-design:$anko_version"
-    implementation "org.jetbrains.anko:anko-design-coroutines:$anko_version"
-    implementation "org.jetbrains.anko:anko-support-v4:$anko_version"
-    implementation "org.jetbrains.anko:anko-constraint-layout:$anko_version"
-    implementation "org.jetbrains.anko:anko-recyclerview-v7:$anko_version"
-    implementation "org.jetbrains.anko:anko-recyclerview-v7-coroutines:$anko_version"
+
 
 }
