--- a/secondmodule/build.gradle
+++ b/secondmodule/build.gradle
@@ -4,6 +4,7 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 android {
     compileSdkVersion 29
+    buildToolsVersion '30.0.1'
 
     defaultConfig {
 //        if (!isModule) {
@@ -26,24 +27,56 @@ android {
         }
     }
     buildFeatures {
-        // Enables Jetpack Compose for this module
-        compose false
+        compose true
     }
     kotlinOptions {
         jvmTarget = '1.8'
     }
     composeOptions {
         kotlinCompilerExtensionVersion "${compose_version}"
-        kotlinCompilerVersion '1.3.70-dev-withExperimentalGoogleExtensions-20200424'
+        kotlinCompilerVersion "1.4.0-dev-withExperimentalGoogleExtensions-20200720"
     }
 
 }
-
+tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
+    kotlinOptions {
+        jvmTarget = "1.8"
+        freeCompilerArgs += ["-Xallow-jvm-ir-dependencies", "-Xskip-prerelease-check"]
+    }
+}
 dependencies {
     implementation project(':basemodule')
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation "androidx.ui:ui-core:$compose_version"
-    implementation "androidx.ui:ui-layout:$compose_version"
-    implementation "androidx.ui:ui-material:$compose_version"
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'com.google.android.material:material:1.1.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+
+
+
+
+//    implementation "androidx.compose:ui-tooling:$compose_version"
+    implementation "androidx.compose.runtime:runtime-dispatch:$compose_version"
+    implementation "androidx.compose.runtime:runtime:$compose_version"
+    implementation "androidx.compose.animation:animation:$compose_version"
+    implementation "androidx.compose.animation:animation-core:$compose_version"
+    implementation "androidx.compose.ui:ui:$compose_version"
+    implementation "androidx.compose.foundation:foundation:$compose_version"
+    implementation "androidx.compose.ui:ui-geometry:$compose_version"
+    implementation "androidx.compose.ui:ui-graphics:$compose_version"
+    implementation "androidx.compose.foundation:foundation-layout:$compose_version"
+    implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
+    implementation "androidx.compose.material:material:$compose_version"
+    implementation "androidx.compose.material:material-icons-core:$compose_version"
+    implementation "androidx.compose.material:material-icons-extended:$compose_version"
+    implementation "androidx.compose.runtime:runtime-rxjava2:$compose_version"
+    implementation "androidx.compose.runtime:runtime-saved-instance-state:$compose_version"
+    implementation "androidx.compose.foundation:foundation-text:$compose_version"
+    implementation "androidx.compose.ui:ui-text-android:$compose_version"
+    implementation "androidx.compose.ui:ui-text:$compose_version"
+    implementation "androidx.compose.ui:ui-unit:$compose_version"
+    implementation "androidx.compose.ui:ui-util:$compose_version"
+//    尚未重构（无更改）
+    implementation "androidx.compose:compose-compiler:$compose_version"
+    implementation "androidx.ui:ui-test:$compose_version"
     implementation "androidx.ui:ui-tooling:$compose_version"
 }
