--- a/secondmodule/src/main/AndroidManifest.xml
+++ b/secondmodule/src/main/AndroidManifest.xml
@@ -9,9 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-
-        <activity android:name=".main.SecondMainActivity"/>
+        <activity android:name=".main.XmlLntActivity"></activity>
+        <activity android:name=".main.SecondMainActivity" />
     </application>
 
 </manifest>
