--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,18 +27,17 @@
 
     <application
         android:name=".MyApp"
+
         android:allowBackup="true"
         android:configChanges="orientation|screenSize"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:networkSecurityConfig="@xml/network_security_config"
-
         android:roundIcon="@mipmap/ic_launcher_round"
         android:screenOrientation="portrait"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:replace="android:name">
-
 <!--        android:requestLegacyExternalStorage="true"-->
         <activity
             android:name=".MainActivity"
@@ -58,7 +57,6 @@
         </activity>
 
 
-
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="${applicationId}.fileProvider"
@@ -71,22 +69,21 @@
 
         <activity
             android:name="io.flutter.embedding.android.FlutterActivity"
-            android:theme="@style/AppTheme"
             android:configChanges="orientation|keyboardHidden|keyboard|screenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode"
             android:hardwareAccelerated="true"
-            android:windowSoftInputMode="adjustResize"
-            />
+            android:theme="@style/AppTheme"
+            android:windowSoftInputMode="adjustResize" />
 
 
-<!--        <provider-->
-<!--            android:name="androidx.startup.InitializationProvider"-->
-<!--            android:authorities="${applicationId}.androidx-startup"-->
-<!--            android:exported="false"-->
-<!--            tools:node="merge">-->
-<!--            <meta-data-->
-<!--                android:name="ls.yylx.lscodestore.startup.WorkManagerInitializer"-->
-<!--                android:value="androidx.startup" />-->
-<!--        </provider>-->
+        <!--        <provider-->
+        <!--            android:name="androidx.startup.InitializationProvider"-->
+        <!--            android:authorities="${applicationId}.androidx-startup"-->
+        <!--            android:exported="false"-->
+        <!--            tools:node="merge">-->
+        <!--            <meta-data-->
+        <!--                android:name="ls.yylx.lscodestore.startup.WorkManagerInitializer"-->
+        <!--                android:value="androidx.startup" />-->
+        <!--        </provider>-->
 
 
     </application>
