--- a/basemodule/build.gradle
+++ b/basemodule/build.gradle
@@ -142,7 +142,7 @@ dependencies {
 
     api 'de.hdodenhof:circleimageview:3.1.0' //圆形图片库
     api 'com.github.chrisbanes:PhotoView:2.3.0' //图片缩放
-    api 'com.jeremyliao:live-event-bus-x:1.5.1'//替代eventbus，基于livedata的通讯库，可以跨进程
+//    api 'com.jeremyliao:live-event-bus-x:1.5.1'//替代eventbus，基于livedata的通讯库，可以跨进程
     api 'cn.bingoogolapple:bga-qrcode-zbar:1.3.6'//高效二维码库，基于zbar
     api 'com.jaeger.statusbarutil:library:1.5.1' //statusbar库
     api 'com.orhanobut:logger:2.2.0' //log打印库
