--- a/build.gradle
+++ b/build.gradle
@@ -8,8 +8,8 @@ buildscript {
     ext.isModule = true
     ext.room_version = "2.3.0-alpha02"
 
-    ext.hilt_version = "2.28-alpha"
-    ext.koin_version = "2.1.6"
+//    ext.hilt_version = "2.28-alpha"
+//    ext.koin_version = "2.1.6"
     ext.compose_version = "0.1.0-dev16"
 
     repositories {
@@ -31,8 +31,9 @@ buildscript {
         classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version")
         classpath("androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version")
 //        classpath ("com.didichuxing.doraemonkit:doraemonkit-plugin:3.1.8")
-        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
-        classpath "org.koin:koin-gradle-plugin:$koin_version"
+//        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
+//        classpath "org.koin:koin-gradle-plugin:$koin_version"
+
     }
 }
 
