--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ apply plugin: "androidx.navigation.safeargs"
 //apply plugin: "com.didi.dokit"
 android {
     compileSdkVersion 30
-    buildToolsVersion "30.0.1"
+    buildToolsVersion "30.0.2"
 
 
     defaultConfig {
@@ -105,8 +105,22 @@ android {
 //    composeOptions {
 //        kotlinCompilerExtensionVersion "0.1.0-dev13"
 //    }
-}
+    buildFeatures {
+        compose true
+    }
+    composeOptions {
+        kotlinCompilerVersion "1.4.0"
+        kotlinCompilerExtensionVersion "${compose_version}"
 
+    }
+
+}
+tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
+    kotlinOptions {
+        jvmTarget = "1.8"
+        freeCompilerArgs += ["-Xallow-jvm-ir-dependencies", "-Xskip-prerelease-check"]
+    }
+}
 
 //
 //dokitExt {
@@ -151,8 +165,10 @@ android {
 dependencies {
     implementation project(":basemodule")
     implementation project(":firstmodule")
-    implementation project(":secondmodule")
+    implementation project(':composemodule')
     implementation project(":flutter")
+
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.4'
 
 
 //    implementation "com.google.dagger:hilt-android:$hilt_version"
@@ -166,7 +182,7 @@ dependencies {
 
     implementation "com.arthenica:mobile-ffmpeg-full:4.3.2"
     implementation "com.quickbirdstudios:opencv:4.1.0-contrib"
-//
+
 //    implementation "androidx.ui:ui-core:0.1.0-dev13"
 //    implementation "androidx.ui:ui-tooling:0.1.0-dev13"
 //    implementation "androidx.ui:ui-layout:0.1.0-dev13"
