--- a/basemodule/build.gradle
+++ b/basemodule/build.gradle
@@ -71,9 +71,9 @@ dependencies {
 
     /**androidx,各种库*/
     //基本库 - 最常使用
-    api 'androidx.appcompat:appcompat:1.3.0-alpha01'
+    api 'androidx.appcompat:appcompat:1.3.0-alpha02'
     api 'androidx.core:core-ktx:1.3.1'
-    api "androidx.fragment:fragment-ktx:1.3.0-alpha07"
+    api "androidx.fragment:fragment-ktx:1.3.0-alpha08"
     api "androidx.navigation:navigation-fragment-ktx:$nav_version"
     api "androidx.navigation:navigation-ui-ktx:$nav_version"
     //    api "androidx.navigation:navigation-dynamic-features-fragment:2.3.0-SNAPSHOT"
@@ -81,13 +81,13 @@ dependencies {
     //页面
     api "androidx.recyclerview:recyclerview:1.1.0"
     api "androidx.recyclerview:recyclerview-selection:1.1.0-rc01"//用于控制触摸和鼠标驱动的选择
-    api 'androidx.constraintlayout:constraintlayout:2.0.0-rc1' //约束布局
+    api 'androidx.constraintlayout:constraintlayout:2.0.0' //约束布局
     api 'androidx.viewpager2:viewpager2:1.0.0' //viewpager2
-    api "androidx.paging:paging-runtime-ktx:3.0.0-alpha04" // paging3分页加载
+    api "androidx.paging:paging-runtime-ktx:3.0.0-alpha05" // paging3分页加载
 
     //其他
     api "androidx.biometric:biometric:1.0.1" //生物识别
-    api "androidx.startup:startup-runtime:1.0.0-alpha02"//启动
+    api "androidx.startup:startup-runtime:1.0.0-alpha03"//启动
     api "androidx.asynclayoutinflater:asynclayoutinflater:1.0.0"//异步布局填充
     api "androidx.autofill:autofill:1.0.0" //自动填写
     api "androidx.browser:browser:1.2.0" //打开浏览器，传递数据
@@ -101,7 +101,7 @@ dependencies {
 
 
     // camerax库
-    def camerax_version = "1.0.0-beta07"
+    def camerax_version = "1.0.0-beta08"
     api "androidx.camera:camera-core:${camerax_version}" //相机库
     api "androidx.camera:camera-camera2:${camerax_version}"//可选，camera2，因为core间接的包含camera2
     api "androidx.camera:camera-lifecycle:${camerax_version}"//可选，使用camera-lifecycle库
@@ -109,7 +109,7 @@ dependencies {
     api "androidx.camera:camera-extensions:1.0.0-alpha14" //可选，使用  CameraX 扩展库
 
     // lifecycle库
-    def lifecycle_version = "2.3.0-alpha06"
+    def lifecycle_version = "2.3.0-alpha07"
     api "androidx.lifecycle:lifecycle-viewmodel-ktx:${lifecycle_version}"
     api "androidx.lifecycle:lifecycle-livedata-ktx:${lifecycle_version}"
     api "androidx.lifecycle:lifecycle-runtime-ktx:${lifecycle_version}"
