--- a/build.gradle
+++ b/build.gradle
@@ -4,13 +4,13 @@ buildscript {
 
 
     ext.nav_version = "2.3.0"
-    ext.kotlin_version = "1.4.0-rc"
+    ext.kotlin_version = "1.4.0"
     ext.isModule = true
     ext.room_version = "2.3.0-alpha02"
 
 //    ext.hilt_version = "2.28-alpha"
 //    ext.koin_version = "2.1.6"
-    ext.compose_version = "0.1.0-dev16"
+    ext.compose_version = "1.0.0-alpha01"
 
     repositories {
         google()
@@ -27,7 +27,7 @@ buildscript {
 
     dependencies {
 //        classpath('com.android.tools.build:gradle:4.2.0-alpha07')
-        classpath('com.android.tools.build:gradle:4.2.0-alpha07')
+        classpath('com.android.tools.build:gradle:4.2.0-alpha08')
         classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version")
         classpath("androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version")
 //        classpath ("com.didichuxing.doraemonkit:doraemonkit-plugin:3.1.8")
