--- a/composemodule/src/main/AndroidManifest.xml
+++ b/composemodule/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".main.XmlLntActivity"></activity>
-        <activity android:name=".main.SecondMainActivity" />
+        <activity android:name=".main.ComposeMainActivity" />
     </application>
 
 </manifest>
