--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -42,3 +42,7 @@ target_link_libraries( # Specifies the target library.
                        # Links the target library to the log library
                        # included in the NDK.
                        ${log-lib} )
+
+
+#find_package (oboe REQUIRED CONFIG)
+#target_link_libraries(app oboe::oboe) # You may have other libraries here such as `log`.
