--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,6 @@
 include ":basemodule"
 include ':composemodule'
-include ":firstmodule"
+include ":ankomodule"
 include ":app"
 //include ":flutter_module"
 
