--- a/basemodule/build.gradle
+++ b/basemodule/build.gradle
@@ -46,6 +46,7 @@ dependencies {
     api "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     api "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     api 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.8'
+    implementation 'androidx.compose:compose-runtime:0.1.0-dev14'
 
 //    /**核心库-anko库 ，dsl动态创建view*/
     def anko_version = '0.10.8'
@@ -71,7 +72,7 @@ dependencies {
 
     /**androidx,各种库*/
     //基本库 - 最常使用
-    api 'androidx.appcompat:appcompat:1.3.0-alpha02'
+    api 'androidx.appcompat:appcompat:ViewPager21.3.0-alpha02'
     api 'androidx.core:core-ktx:1.3.1'
     api "androidx.fragment:fragment-ktx:1.3.0-alpha08"
     api "androidx.navigation:navigation-fragment-ktx:$nav_version"
@@ -81,7 +82,7 @@ dependencies {
     //页面
     api "androidx.recyclerview:recyclerview:1.1.0"
     api "androidx.recyclerview:recyclerview-selection:1.1.0-rc01"//用于控制触摸和鼠标驱动的选择
-    api 'androidx.constraintlayout:constraintlayout:2.0.0' //约束布局
+    api 'androidx.constraintlayout:constraintlayout:2.0.1' //约束布局
     api 'androidx.viewpager2:viewpager2:1.0.0' //viewpager2
     api "androidx.paging:paging-runtime-ktx:3.0.0-alpha05" // paging3分页加载
 
@@ -94,11 +95,9 @@ dependencies {
     api "androidx.work:work-runtime-ktx:2.4.0" //WorkManager,应用退出也可以完成
 
 
-
     api "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
     api "androidx.room:room-ktx:$room_version"
-
 
     // camerax库
     def camerax_version = "1.0.0-beta08"
@@ -118,10 +117,8 @@ dependencies {
     api "androidx.lifecycle:lifecycle-extensions:2.2.0"
 
 
-
     api "androidx.biometric:biometric:1.0.1"//指纹库
     api 'com.google.android.material:material:1.3.0-alpha02' //样式库
-
 
 
     /**网络相关*/
