--- a/ankomodule/build.gradle
+++ b/ankomodule/build.gradle
@@ -1,18 +1,17 @@
-apply plugin: 'com.android.library'
-apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
-apply plugin: 'kotlin-kapt'
-
-
+import ls.yylx.lscodestore.plugin.*
+plugins {
+    id "com.android.library"
+    id "kotlin-android"
+    id "kotlin-kapt"
+    id "kotlin-android-extensions"
+    id "ls.yylx.lscodestore.plugin"
+    id "androidx.navigation.safeargs"
+}
 android {
     compileSdkVersion 30
-    buildToolsVersion '30.0.1'
+    buildToolsVersion '30.0.2'
 
     defaultConfig {
-        if (!isModule) {
-            applicationId "ls.yylx.lscodestore.firstmodule"
-        }
-
         minSdkVersion 21
         targetSdkVersion 29
         versionCode 1
@@ -43,10 +42,7 @@ android {
 
 dependencies {
     implementation project(':basemodule')
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.google.android.material:material:1.2.0'
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    //    /**核心库-anko库 ，dsl动态创建view*/
+
 
 
 }
