--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,14 +22,17 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         externalNativeBuild {
             cmake {
-                cppFlags ""
+                cppFlags "-std=c++14"
+                // Uncomment the following line to build for only specific ABIs - this is useful
+                // to speed up build/deploy times during development.
+                // abiFilters "arm64-v8a"
             }
             //oboe
             cmake {
                 arguments "-DANDROID_STL=c++_shared"
             }
-        }
 
+        }
     }
 
     signingConfigs {
@@ -42,6 +45,11 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile("proguard-android-optimize.txt"), "proguard-rules.pro"
+            ndk {
+                //目前已支持 "armeabi-v7a","arm64-v8a","x86","x86_64" 平台架构
+                abiFilters "armeabi-v7a","arm64-v8a"
+            }
+
         }
     }
     flavorDimensions "flavor"
@@ -81,7 +89,7 @@ android {
             version "3.10.2"
         }
     }
-
+   
     /**加快编译速度*/
     tasks.whenTaskAdded { task ->
         if (task.name.contains("lint")
@@ -108,6 +116,7 @@ android {
     afterEvaluate {
 
     }
+    ndkVersion '21.3.6528147'
 //    buildFeatures {
 //        // Enables Jetpack Compose for this module
 //        compose true
@@ -180,14 +189,6 @@ dependencies {
 
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.4'
 
-//    implementation "com.google.dagger:hilt-android:$hilt_version"
-//    kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
-
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation "androidx.legacy:legacy-support-v4:1.0.0"
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
-
 
     implementation "com.arthenica:mobile-ffmpeg-full:4.3.2"
     implementation "com.quickbirdstudios:opencv:4.1.0-contrib"
@@ -195,44 +196,17 @@ dependencies {
 
     implementation 'com.google.oboe:oboe:1.4.3' //oboe 低延迟音频ndk
 
-//    implementation "androidx.ui:ui-core:0.1.0-dev13"
-//    implementation "androidx.ui:ui-tooling:0.1.0-dev13"
-//    implementation "androidx.ui:ui-layout:0.1.0-dev13"
-//    implementation "androidx.ui:ui-material:0.1.0-dev13"
 
 
     debugImplementation "com.didichuxing.doraemonkit:doraemonkit:3.1.8"
     releaseImplementation "com.didichuxing.doraemonkit:doraemonkit-no-op:3.1.8"
-//    debugImplementation "com.squareup.leakcanary:leakcanary-android:2.4"
 //    debugImplementation "com.didichuxing.doraemonkit:doraemonkit:3.1.8"
 //    releaseImplementation "com.didichuxing.doraemonkit:doraemonkit-no-op:3.1.8"
 
-//    // Koin for Kotlin
-//    implementation "org.koin:koin-core:$koin_version"
-//    implementation "org.koin:koin-core-ext:$koin_version"
-//    testImplementation "org.koin:koin-test:$koin_version"
-//    // Koin for Android
-//    implementation "org.koin:koin-android:$koin_version"
-//    // Koin AndroidX Scope features
-//    implementation "org.koin:koin-androidx-scope:$koin_version"
-//    // Koin AndroidX ViewModel features
-//        implementation "org.koin:koin-androidx-viewmodel:$koin_version"
-//    // Koin AndroidX Fragment features
-//    implementation "org.koin:koin-androidx-fragment:$koin_version"
-//    // Koin AndroidX Experimental features
-//    implementation "org.koin:koin-androidx-ext:$koin_version"
-
-// implementation "org.koin:koin-java:$koin_version"
-
-//    implementation "org.koin:koin-androidx-scope:$koin_version"
-//    implementation "org.koin:koin-androidx-viewmodel:$koin_version"
-//    implementation "org.koin:koin-androidx-fragment:$koin_version"
-//    implementation "org.koin:koin-androidx-ext:$koin_version"
 
 
     testImplementation "junit:junit:4.13"
-    androidTestImplementation "androidx.test.ext:junit:1.1.1"
-    androidTestImplementation "androidx.test.espresso:espresso-core:3.2.0"
-
+    androidTestImplementation "androidx.test.ext:junit:1.1.2"
+    androidTestImplementation "androidx.test.espresso:espresso-core:3.3.0"
 
 }
