--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,12 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
 
-
-    ext.nav_version = "2.3.0"
-    ext.kotlin_version = "1.4.0"
-    ext.isModule = true
-    ext.room_version = "2.3.0-alpha02"
-
-//    ext.hilt_version = "2.28-alpha"
-//    ext.koin_version = "2.1.6"
-    ext.compose_version = "1.0.0-alpha01"
+    ext {
+        nav_version = "2.3.0"
+        kotlin_version = "1.4.10"
+        isModule = true
+        room_version = "2.3.0-alpha02"
+        compose_version = "1.0.0-alpha03"
+    }
 
     repositories {
         google()
@@ -18,7 +14,9 @@ buildscript {
         mavenCentral()
 
         maven { url = "https://dl.bintray.com/kotlin/kotlin-eap" }
-        maven { url "https://jitpack.io" }
+        maven { url = "https://jitpack.io" }
+
+
 //        maven("https://jitpack.io")
 //        maven("http://dl.bintray.com/kotlin/kotlin-eap")
 //        maven("https://maven.aliyun.com/repository/google")
@@ -27,7 +25,7 @@ buildscript {
 
     dependencies {
 //        classpath('com.android.tools.build:gradle:4.2.0-alpha07')
-        classpath('com.android.tools.build:gradle:4.2.0-alpha09')
+        classpath('com.android.tools.build:gradle:4.2.0-alpha12')
         classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version")
         classpath("androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version")
 //        classpath ("com.didichuxing.doraemonkit:doraemonkit-plugin:3.1.8")
@@ -39,8 +37,6 @@ buildscript {
 
 
 allprojects {
-
-
     repositories {
         google()
         jcenter()
@@ -53,9 +49,11 @@ allprojects {
 //        maven("https://maven.aliyun.com/repository/public")
 
 
-
     }
 }
+
+
+
 
 task clean(type: Delete) {
     delete rootProject.buildDir
