--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,12 @@
-apply plugin: "com.android.application"
-apply plugin: "kotlin-android"
-apply plugin: "kotlin-kapt"
-apply plugin: "kotlin-android-extensions"
-apply plugin: "androidx.navigation.safeargs"
-//apply plugin: 'dagger.hilt.android.plugin'
-//apply plugin: 'koin'
+import ls.yylx.lscodestore.plugin.*
+plugins {
+    id "com.android.application"
+    id "kotlin-android"
+    id "kotlin-kapt"
+    id "kotlin-android-extensions"
+    id "ls.yylx.lscodestore.plugin"
+    id "androidx.navigation.safeargs"
+}
 //apply plugin: "com.didi.dokit"
 android {
     compileSdkVersion 30
@@ -141,65 +143,20 @@ tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
     }
 }
 
-//
-//dokitExt {
-//    //dokit 插件开关
-//    dokitPluginSwitch true
-//    //通用设置
-//    comm {
-//        //地图经纬度开关
-//        gpsSwitch true
-//        //网络开关
-//        networkSwitch true
-//        //大图开关
-//        bigImgSwitch true
-//    }
-//
-//    slowMethod {
-//        //0:默认模式 打印函数调用栈 需添加指定入口  默认为application onCreate 和attachBaseContext
-//        //1:普通模式 运行时打印某个函数的耗时 全局业务代码函数插入 已弃用
-//        strategy 1
-//        //函数功能开关 已弃用
-//        methodSwitch false
-//
-//        //调用栈模式配置
-//        stackMethod {
-//            //默认值为 5ms 小于该值的函数在调用栈中不显示
-//            thresholdTime 5
-//            //调用栈函数入口
-//            enterMethods = ["com.didichuxing.doraemondemo.MainDebugActivity.test1"]
-//        }
-//        //普通模式配置`
-//        normalMethod {
-//            //默认值为 500ms 小于该值的函数在运行时不会在控制台中被打印
-//            thresholdTime 100
-//            //需要针对函数插装的包名
-//            packageNames = ["com.didichuxing.doraemondemo"]
-//            //不需要针对函数插装的包名&类名
-//            methodBlacklist = ["com.didichuxing.doraemondemo.dokit"]
-//        }
-//    }
-//}
-
 dependencies {
     implementation project(":basemodule")
     implementation project(":ankomodule")
     implementation project(':composemodule')
     implementation project(":flutter")
 
+
+
+    implementation(Other.ffmpeg,
+            Other.opencv,
+            Other.oboe
+    )
+
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.4'
-
-
-    implementation "com.arthenica:mobile-ffmpeg-full:4.3.2"
-    implementation "com.quickbirdstudios:opencv:4.1.0-contrib"
-
-
-    implementation 'com.google.oboe:oboe:1.4.3' //oboe 低延迟音频ndk
-
-
-
-    debugImplementation "com.didichuxing.doraemonkit:doraemonkit:3.1.8"
-    releaseImplementation "com.didichuxing.doraemonkit:doraemonkit-no-op:3.1.8"
 //    debugImplementation "com.didichuxing.doraemonkit:doraemonkit:3.1.8"
 //    releaseImplementation "com.didichuxing.doraemonkit:doraemonkit-no-op:3.1.8"
 
