--- a/composemodule/build.gradle
+++ b/composemodule/build.gradle
@@ -1,7 +1,14 @@
-apply plugin: 'com.android.library'
-apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
-apply plugin: 'kotlin-kapt'
+import ls.yylx.lscodestore.plugin.*
+
+plugins {
+    id "com.android.library"
+    id "kotlin-android"
+    id "kotlin-kapt"
+    id "kotlin-android-extensions"
+    id "ls.yylx.lscodestore.plugin"
+    id "androidx.navigation.safeargs"
+}
+
 android {
     compileSdkVersion 30
     buildToolsVersion '30.0.2'
@@ -49,32 +56,16 @@ tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
 }
 dependencies {
     implementation project(':basemodule')
-
-//    implementation "androidx.compose:ui-tooling:$compose_version"
-    api "androidx.compose.runtime:runtime-dispatch:$compose_version"
-    api "androidx.compose.runtime:runtime:$compose_version"
-    api "androidx.compose.animation:animation:$compose_version"
-    api "androidx.compose.animation:animation-core:$compose_version"
-    api "androidx.compose.ui:ui:$compose_version"
-    api "androidx.compose.foundation:foundation:$compose_version"
-    api "androidx.compose.ui:ui-geometry:$compose_version"
-    api "androidx.compose.ui:ui-graphics:$compose_version"
-    api "androidx.compose.foundation:foundation-layout:$compose_version"
-    api "androidx.compose.runtime:runtime-livedata:$compose_version"
-    api "androidx.compose.material:material:$compose_version"
-    api "androidx.compose.material:material-icons-core:$compose_version"
-    api "androidx.compose.material:material-icons-extended:$compose_version"
-    api "androidx.compose.runtime:runtime-rxjava2:$compose_version"
-    api "androidx.compose.runtime:runtime-saved-instance-state:$compose_version"
-    api "androidx.compose.foundation:foundation-text:$compose_version"
-    api "androidx.compose.ui:ui-text-android:$compose_version"
-    api "androidx.compose.ui:ui-text:$compose_version"
-    api "androidx.compose.ui:ui-unit:$compose_version"
-    api "androidx.compose.ui:ui-util:$compose_version"
-//    尚未重构（无更改）
-    api "androidx.compose:compose-compiler:$compose_version"
-    api "androidx.ui:ui-test:$compose_version"
-    api "androidx.ui:ui-tooling:$compose_version"
-
+    api(
+            JetpackCompose.ui,
+            JetpackCompose.ui_tooling,
+            JetpackCompose.foundation,
+            JetpackCompose.material,
+            JetpackCompose.material_core,
+            JetpackCompose.material_extended,
+            JetpackCompose.rxjava2,
+            JetpackCompose.livedata,
+            JetpackCompose.androidTestImplementation_test
+    )
 
 }
