--- a/basemodule/build.gradle
+++ b/basemodule/build.gradle
@@ -11,7 +11,7 @@ apply plugin: 'androidx.navigation.safeargs'
 
 android {
     compileSdkVersion 29
-    buildToolsVersion '30.0.1'
+    buildToolsVersion '30.0.2'
 
     defaultConfig {
         minSdkVersion 21
@@ -39,6 +39,11 @@ android {
     }
 
 
+    //mlkit:smart-reply，禁止压缩 TensorFlow lite文件
+    aaptOptions {
+        noCompress "tflite"
+    }
+
 }
 
 dependencies {
@@ -46,7 +51,24 @@ dependencies {
     api "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     api "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     api 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.8'
-    implementation 'androidx.compose:compose-runtime:0.1.0-dev14'
+
+    /**Ml Kit**/
+    //图像库
+    api 'com.google.android.gms:play-services-mlkit-text-recognition:16.1.1'//识别文字，https://developers.google.com/ml-kit/vision/text-recognition/android
+    api 'com.google.mlkit:barcode-scanning:16.0.3'//一维码，二维码，https://developers.google.com/ml-kit/vision/barcode-scanning/android
+    api 'com.google.mlkit:face-detection:16.0.2' //人脸 https://developers.google.com/ml-kit/vision/face-detection/android
+    api 'com.google.mlkit:pose-detection:16.0.0' //姿势，https://developers.google.com/ml-kit/vision/pose-detection/android
+    api 'com.google.mlkit:image-labeling:17.0.0' //图像标注 ，https://developers.google.com/ml-kit/vision/image-labeling/android
+//    api 'com.google.mlkit:image-labeling-custom:16.2.1' //自定义图像标注
+    api 'com.google.mlkit:object-detection:16.2.1' //检测和跟踪对象 ，https://developers.google.com/ml-kit/vision/object-detection/android
+    api 'com.google.mlkit:digital-ink-recognition:16.1.0' //笔记检测，https://developers.google.com/ml-kit/vision/digital-ink-recognition/android
+
+    //文字库
+    api 'com.google.mlkit:language-id:16.1.1' //识别文字，https://developers.google.com/ml-kit/language/identification/android
+    api 'com.google.mlkit:translate:16.1.1' //翻译文字，https://developers.google.com/ml-kit/language/translation/android
+    api 'com.google.mlkit:smart-reply:16.1.1'//智能回复，https://developers.google.com/ml-kit/language/smart-reply/android
+
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9' //协程库
 
 //    /**核心库-anko库 ，dsl动态创建view*/
     def anko_version = '0.10.8'
@@ -72,7 +94,7 @@ dependencies {
 
     /**androidx,各种库*/
     //基本库 - 最常使用
-    api 'androidx.appcompat:appcompat:ViewPager21.3.0-alpha02'
+    api 'androidx.appcompat:appcompat:1.3.0-alpha02'
     api 'androidx.core:core-ktx:1.3.1'
     api "androidx.fragment:fragment-ktx:1.3.0-alpha08"
     api "androidx.navigation:navigation-fragment-ktx:$nav_version"
@@ -81,10 +103,10 @@ dependencies {
 
     //页面
     api "androidx.recyclerview:recyclerview:1.1.0"
-    api "androidx.recyclerview:recyclerview-selection:1.1.0-rc01"//用于控制触摸和鼠标驱动的选择
+    api "androidx.recyclerview:recyclerview-selection:1.1.0-rc02"//用于控制触摸和鼠标驱动的选择
     api 'androidx.constraintlayout:constraintlayout:2.0.1' //约束布局
     api 'androidx.viewpager2:viewpager2:1.0.0' //viewpager2
-    api "androidx.paging:paging-runtime-ktx:3.0.0-alpha05" // paging3分页加载
+    api "androidx.paging:paging-runtime-ktx:3.0.0-alpha06" // paging3分页加载
 
     //其他
     api "androidx.biometric:biometric:1.0.1" //生物识别
@@ -104,8 +126,8 @@ dependencies {
     api "androidx.camera:camera-core:${camerax_version}" //相机库
     api "androidx.camera:camera-camera2:${camerax_version}"//可选，camera2，因为core间接的包含camera2
     api "androidx.camera:camera-lifecycle:${camerax_version}"//可选，使用camera-lifecycle库
-    api "androidx.camera:camera-view:1.0.0-alpha14"//可选，使用 CameraX View
-    api "androidx.camera:camera-extensions:1.0.0-alpha14" //可选，使用  CameraX 扩展库
+    api "androidx.camera:camera-view:1.0.0-alpha15"//可选，使用 CameraX View
+    api "androidx.camera:camera-extensions:1.0.0-alpha15" //可选，使用  CameraX 扩展库
 
     // lifecycle库
     def lifecycle_version = "2.3.0-alpha07"
