--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ buildscript {
 
 //    ext.hilt_version = "2.28-alpha"
 //    ext.koin_version = "2.1.6"
-    ext.compose_version = "1.0.0-alpha01"
+    ext.compose_version = "1.0.0-alpha02"
 
     repositories {
         google()
@@ -26,8 +26,9 @@ buildscript {
     }
 
     dependencies {
-//        classpath('com.android.tools.build:gradle:4.2.0-alpha07')
-        classpath('com.android.tools.build:gradle:4.2.0-alpha09')
+//        classpath('com.android.tools.build:gradle:4.0.1')
+        classpath('com.android.tools.build:gradle:4.2.0-alpha12')
+
         classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version")
         classpath("androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version")
 //        classpath ("com.didichuxing.doraemonkit:doraemonkit-plugin:3.1.8")
@@ -51,7 +52,6 @@ allprojects {
 //        maven("http://dl.bintray.com/kotlin/kotlin-eap")
 //        maven("https://maven.aliyun.com/repository/google")
 //        maven("https://maven.aliyun.com/repository/public")
-
 
 
     }
